# bosen

./: CMakeLists.txt  defns.mk.hotbox  defns.mk.template
app/mlr/: CMakeLists.txt  Makefile
app/mlr/datasets/: wdai_dnn.conf
app/mlr/script/: launch.py
app/mlr/src/: common.hpp  mlr_engine.cpp  mlr_engine.hpp  mlr_main.cpp
docs/: Doxyfile  conf.py
test/: Makefile  run_db_server.py  run_hotbox_client.py
test/client/: hotbox_client_main.cpp
test/db/: db_server_main.cpp
test/facility/: test_facility.hpp
test/python/: db_client.py
test/resource/: test_transform1.conf  test_transform2.conf
